# JupiterServer-SAN

./: CMakeLists.txt
scripts/: initDatabase.sql
src/: main.cpp
src/database/: DatabaseManager.cpp  DatabaseManager.h  DatabaseQueries.cpp  DatabaseQueries.h
src/models/: Message.cpp  Message.h  User.cpp  User.h
src/network/: NotificationManager.cpp  NotificationManager.h  Protocol.h
src/server/: ActiveSessions.h  ClientSession.cpp  ClientSession.h  ConnectionManager.cpp  ConnectionManager.h  NotificationService.cpp  NotificationService.h  Protocol.cpp  Protocol.h  Server.cpp  Server.h
tests/: CMakeLists.txt  ClientSessionTest.cpp  ClientSessionTest.h  ProtocolTest.cpp  ProtocolTest.h  TestDatabaseQueries.cpp  TestDatabaseQueries.h  TestSocket.cpp  TestSocket.h  main_test.cpp
